--- a/templates/ajax/game/beyond/desert.html.twig
+++ b/templates/ajax/game/beyond/desert.html.twig
@@ -122,12 +122,12 @@
                     {% if zone.prototype %}
                         <div class="ruin-info">
                             {% if zone.buryCount > 0 %}
-                                <b>{{ 'Verschüttete Ruine'|trans({},'game') }}</b>
-                                {% if scout %}<b>(<i>{{ zone.prototype.label|trans({}, 'game') }}</i>)</b>{% endif %}
-                                <br />
-                                {{ 'Es muss noch aufgeräumt werden'|trans({},'game') }}:
+                                <p>
+                                    <span class="ruin-desc">{{ 'Die Zone ist vollständig mit verrottender Vegetation, Sand und allem möglichen Schrott bedeckt. Du bist dir sicher, dass es hier etwas zu finden gibt, aber zunächst musst du diesen gesamten Sektor aufräumen um ihn vernünftig durchsuchen zu können.'|trans({}, 'game') }}</span>
+                                </p>
+                                <span class="ruin-bury-desc">{{ 'Es muss noch aufgeräumt werden'|trans({},'game') }}:</span>
                                 <div class="ruin-bury-count">{% for p in 1..zone.buryCount %}<div></div>{% endfor %}</div>
-                                <span class="ruin-desc">{{ 'Die Zone ist vollständig mit verrottender Vegetation, Sand und allem möglichen Schrott bedeckt. Du bist dir sicher, dass es hier etwas zu finden gibt, aber zunächst musst du diesen gesamten Sektor aufräumen um ihn vernünftig durchsuchen zu können.'|trans({}, 'game') }}</span>
+                                {% if scout %}<button id="scout_ruin_discover">{{ 'Aufklärer: Ruinen erkunden'|trans({},'game') }}<img alt="" src="{{ asset('build/images/icons/small_stealthy.gif') }}" /><div class="tooltip help">{{ 'Mit dieser Aktion kannst du ermitteln, welches Gebäude hier vergraben ist.'|trans({},'game') }}</div></button>{% endif %}
                             {% else %}
                                 <img src="{{ asset('build/images/icons/small_help.gif') }}" /> <span class="ruin-name">{{ 'Ruine'|trans({},'game') }} : <b>{{ zone.prototype.label|trans({}, 'game') }}</b></span><br />
                                 <span class="ruin-desc">{{ zone.prototype.description|trans({}, 'game') }}</span>
@@ -1002,6 +1002,12 @@
         $.html.addEventListenerAll('#dig_button', 'click', function() {
             $.html.conditionalSetTutorialStage(10,'text4',10,'text5');
         });
+        {% endif %}
+
+        {% if scout %}
+            $.html.addEventListenerAll('#scout_ruin_discover', 'click', function() {
+                $.html.notice('{{ 'Du gräbst dir einen Weg durch die Trümmer, nimmst einige Untersuchungen vor und entfernst den Schmutz von deinen Händen. Nach einigen langen Minuten kannst du ohne jeden Zweifel sagen, was sich unter den Trümmern verbirgt: <strong>%building%</strong>!'|trans({'%building%': zone.prototype.label|trans({}, 'game')},'game')|e('js') }}');
+            });
         {% endif %}
     </script>
 {% endblock %}
