make city join text correct size

--- a/assets/less/modules/ghost.less
+++ b/assets/less/modules/ghost.less
@@ -17,5 +17,5 @@
 .town-random {
   margin: auto; width: 511px; height: 50px; background: url("../../img/background/joinGame_bg.png") no-repeat;
   padding: 0 10px;
-  &>.label { height: calc(100% - 5px); width: calc(100% - 220px); font-weight: bold }
+  &>.label { height: calc(100% - 5px); width: calc(100% - 220px); font-weight: bold; font-size: 1.35rem }
 }
