--- a/templates/ajax/admin/widget/controls.twig
+++ b/templates/ajax/admin/widget/controls.twig
@@ -10,17 +10,22 @@
             <div class="padded cell grow-1 shrink-1">
                 <select id="{{ _self.gen_id(prefix,'itemwidget','select')}}">
                     {% for itemPrototype in itemPrototypes %}
-                        <option value="{{itemPrototype.id}}">{{ itemPrototype.label|trans({}, 'items') }}</option>
+                        <option title="{{ itemPrototype.name }}" value="{{itemPrototype.id}}">{{ itemPrototype.label|trans({}, 'items') }}</option>
                     {% endfor %}
                 </select>
             </div>
-            <div class="padded cell grow-0 shrink-0"><label for="{{ _self.gen_id(prefix,'itemwidget','number')}}">X</label></div>
-            <div class="padded cell grow-3 shrink-3"> <input type="number" id="{{ _self.gen_id(prefix,'itemwidget','number')}}" value="1"/> </div>
-            <div class="padded cell grow-0 shrink-0 right">
-                <label>{{'Vergiftet:'|trans({}, 'admin')}}<input type="checkbox" id="{{ _self.gen_id(prefix,'itemwidget','opt_poison')}}" /></label><br />
-                <label>{{'Zerstört:'|trans({}, 'admin')}}<input type="checkbox" id="{{ _self.gen_id(prefix,'itemwidget','opt_broken')}}" /></label><br />
-                <label>{{'Essentiell:'|trans({}, 'admin')}}<input type="checkbox" id="{{ _self.gen_id(prefix,'itemwidget','opt_essential')}}" /></label><br />
-                <label>{{'Versteckt:'|trans({}, 'admin')}}<input type="checkbox" id="{{ _self.gen_id(prefix,'itemwidget','opt_hidden')}}" /></label><br />
+            <div class="padded cell grow-0 shrink-0 hide-md hide-sm"><label for="{{ _self.gen_id(prefix,'itemwidget','number')}}">X</label></div>
+            <div class="padded cell grow-2 shrink-2"> <input type="number" id="{{ _self.gen_id(prefix,'itemwidget','number')}}" value="1"/> </div>
+        </div>
+        <div class="row-flex">
+            <div class="padded cell note note-lightest">
+                <label>{{'Vergiftet:'|trans({}, 'admin')}}<input type="checkbox" id="{{ _self.gen_id(prefix,'itemwidget','opt_poison')}}" /></label>
+            </div><div class="padded cell note note-lightest">
+                <label>{{'Zerstört:'|trans({}, 'admin')}}<input type="checkbox" id="{{ _self.gen_id(prefix,'itemwidget','opt_broken')}}" /></label>
+            </div><div class="padded cell note note-lightest">
+                <label>{{'Essentiell:'|trans({}, 'admin')}}<input type="checkbox" id="{{ _self.gen_id(prefix,'itemwidget','opt_essential')}}" /></label>
+            </div><div class="padded cell note note-lightest">
+                <label>{{'Versteckt:'|trans({}, 'admin')}}<input type="checkbox" id="{{ _self.gen_id(prefix,'itemwidget','opt_hidden')}}" /></label>
             </div>
         </div>
         <div class="row">
@@ -187,14 +192,14 @@
 {% macro widget_point_control(prefix = '') %}
     <div class="lightbox">
         <div class="row-flex">
-            <div class="padded cell grow-1 shrink-1">
+            <div class="padded cell grow-2 shrink-1">
                 <label><select id="{{ _self.gen_id(prefix,'pointwidget','select')}}">
                         <option value="ap">{{'AP'|trans({}, 'admin')}}</option>
                         <option value="bp">{{'BP'|trans({}, 'admin')}}</option>
                         <option value="mp">{{'MP'|trans({}, 'admin')}}</option>
                     </select></label>
             </div>
-            <div class="padded cell grow-1 shrink-1">
+            <div class="padded cell grow-1 shrink-3">
                 <label><input type="number" id="{{ _self.gen_id(prefix,'pointwidget','number')}}" value="6"/></label>
             </div>
             <div class="padded cell grow-0 shrink-0"><button x-control="1"  id="{{ _self.gen_id(prefix,'pointwidget','give')}}"><i class="fa fa-plus"></i><div class="tooltip">{{'Hinzufügen'|trans({}, 'admin')}}</div></button></div>
