use correct class for coalition warning + add rp in bottom of town selec

--- a/templates/ajax/ghost/intro.html.twig
+++ b/templates/ajax/ghost/intro.html.twig
@@ -49,19 +49,19 @@
                                 {% endif %}
 
                                 {% if warnCoaInactive %}
-                                    <div class="note note-warning">
+                                    <div class="note note-critical">
                                         {% trans from 'ghost' %}
                                             Achtung: Du stehst deiner Koalition NICHT ZUR VERFÜGUNG! Das bedeutet, dass du diese Partie allein spielen wirst.
                                         {% endtrans %}
                                     </div>
                                 {% elseif warnCoaEmpty %}
-                                    <div class="note note-warning">
+                                    <div class="note note-critical">
                                         {% trans from 'ghost' %}
                                             Achtung: Im Moment steht kein Mitglied deiner Koalition zur Verfügung, um dir in eine Stadt zu folgen.
                                         {% endtrans %}
                                     </div>
                                 {% elseif warnCoaNotComplete %}
-                                    <div class="note note-warning">
+                                    <div class="note note-critical">
                                         {% trans from 'ghost' %}
                                             Achtung: Im Moment stehen nicht alle Mitglieder deiner Koalition zur Verfügung, um dir in eine Stadt zu folgen.
                                         {% endtrans %}
@@ -145,6 +145,12 @@
                             {% endfor %}
                         </div>
                     </div>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="cell padded rw-12">
+                    <div class="small"><img alt="" src="{{ asset('build/images/icons/small_rp.gif') }}" /> {{'Beginne ein neues Leben in der Welt der Verdammten une versuche, so lang wie möglich zu überleben. Wer weiß, ws dich in dieser neuen Stadt erwarten wird?'|trans({}, 'ghost')}}</div>
                 </div>
             </div>
         </div>
