Fix background on cell-small

--- a/assets/less/theme.less
+++ b/assets/less/theme.less
@@ -236,7 +236,7 @@ x-message {
 
   &>#content {
     margin: 0 5px 0 @myhordes-left-padding;
-    &>.row:not(.external-app)>.cell:not(.manual-background),&>noscript>.row>.cell, & .cell.background {
+    &>.row:not(.external-app)>.cell:not(.manual-background),&>noscript>.row>.cell, & .cell.background,&>.row:not(.external-app)>.cell-small:not(.manual-background),&>noscript>.row>.cell-small, & .cell-small.background {
 
       &.header>h4:first-child {
         &+*::before { content: " "; display: block; height: 24px; }
