various improvements to city join screen

--- a/assets/less/modules/ghost.less
+++ b/assets/less/modules/ghost.less
@@ -19,3 +19,21 @@
   padding: 0 10px;
   &>.label { height: calc(100% - 5px); width: calc(100% - 220px); font-weight: bold }
 }
+
+.town-join-rp {
+  width:fit-content;
+  padding-right: 15px;
+  .town-join-rp-head {
+    color:white;
+    font-size: 110%;
+    font-weight: bold;
+  }
+  .town-join-rp-text {
+    font-size: 80%;
+
+    &:before {
+      content: "";
+      display: block;
+    }
+  }
+}
