--- a/assets/less/theme.less
+++ b/assets/less/theme.less
@@ -236,7 +236,7 @@ x-message {
 
   &>#content {
     margin: 0 5px 0 @myhordes-left-padding;
-    &>.row:not(.external-app)>.cell:not(.manual-background),&>noscript>.row>.cell, & .cell.background {
+    &>.row:not(.external-app)>.cell:not(.manual-background),&>.row:not(.external-app)>.cell-small:not(.manual-background),&>noscript>.row>.cell,&>noscript>.row>.cell-small, & .cell.background , & .cell-small.background {
 
       &.header>h4:first-child {
         &+*::before { content: " "; display: block; height: 24px; }
@@ -268,7 +268,7 @@ x-message {
       .quote-foot { background: url('../img/background/flavor_footer.jpg') left bottom no-repeat; }
     }
 
-    &>.row.external-app>.cell {
+    &>.row.external-app>.cell, &>.row.external-app>.cell-small {
       margin-top: 40px; border: 1px solid #773939; outline: 3px solid #5c2b20;
       background: #5c2b20 none; color: #f0d79e;
 
