--- a/templates/ajax/admin/towns/explorer.html.twig
+++ b/templates/ajax/admin/towns/explorer.html.twig
@@ -164,7 +164,7 @@
                             {% endif %}
                         </div>
                         {% if fromTown is defined %}
-                        <div class="padded cell rw-6 rw-lg-10 rw-sm-12 no-ws">
+                        <div class="padded cell rw-3 rw-lg-5 rw-sm-12 no-ws">
                             {% if fromTown.ap > 0 and not fromTown.complete %}
                                 <div class="ap-bar">
                                     <div class="bar" style="width: {{ 100*(fromTown.ap/building.ap) }}%"></div>
@@ -180,8 +180,13 @@
                                 <div class="ap">{{ fromTown.ap }}/{{ building.ap }}</div>
                             </div>
                         </div>
-                        <div class="padded cell rw-1 rw-lg-2 rw-sm-12 right">
-                            <button class="inline build-btn" x-building-id="{{ fromTown.id }}" x-building-admin-action="setAp"><i class="fa fa-edit"></i></button>
+                        <div class="padded cell rw-4 rw-lg-7 rw-sm-12 right">
+                            <button class="inline build-btn" x-building-id="{{ fromTown.id }}" x-building-admin-action="{% if fromTown.complete %}setHp{% else %}setAp{% endif %}"><i class="fa fa-edit"></i></button>
+                            {% if not fromTown.complete %}
+                                <button class="inline build-btn" x-building-id="{{ fromTown.id }}" x-building-admin-action="complete"><i class="fa fa-check"></i></button>
+                            {% else %}
+                                <button class="inline build-btn" x-building-id="{{ fromTown.id }}" x-building-admin-action="destroy"><i class="fa fa-times"></i></button>
+                            {% endif %}
                         </div>
                         {% endif %}
                     </div>
@@ -622,19 +627,51 @@
                    let action = buildingBtns[i].getAttribute("x-building-admin-action");
                    switch(action) {
                        case "setAp":
-                           let ap = null, valid = false;
+                           let ap = null, ap_valid = false;
                            do {
-                               ap = window.prompt("{{ 'Wie viele Aktionspunkte möchtest du in den Bau investieren?'|trans({},'game')|e('js') }}", "1");
-                               if (ap === null) valid = true;
+                               ap = window.prompt("{{ 'Baufortschritt setzen:'|trans({},'admin')|e('js') }}", "1");
+                               if (ap === null) ap_valid = true;
                                else {
                                    ap = parseInt(ap);
-                                   valid = !isNaN(ap) && ap >= 0;
+                                   ap_valid = !isNaN(ap) && ap >= 0;
                                }
-                           } while (!valid);
+                           } while (!ap_valid);
 
-                           if (!ap) return;
+                           if (ap === null) return;
 
                            $.ajax.easySend( '{{ path('admin_town_set_building_ap', {id: town.id }) }}', {'building': buildingBtns[i].getAttribute("x-building-id"), 'ap': ap},
+                               function () {
+                                   $.ajax.load(null, '{{ path('admin_town_explorer', {id: town.id, tab: "buildings"}) }}', true);
+                               } );
+                           break;
+
+                       case "setHp":
+                           let hp = null, hp_valid = false;
+                           do {
+                               hp = window.prompt("{{ 'Integrität setzen:'|trans({},'admin')|e('js') }}", "1");
+                               if (hp === null) hp_valid = true;
+                               else {
+                                   hp = parseInt(hp);
+                                   hp_valid = !isNaN(hp) && hp >= 0;
+                               }
+                           } while (!hp_valid);
+
+                           if (hp === null) return;
+
+                           $.ajax.easySend( '{{ path('admin_town_set_building_hp', {id: town.id }) }}', {'building': buildingBtns[i].getAttribute("x-building-id"), 'hp': hp},
+                               function () {
+                                   $.ajax.load(null, '{{ path('admin_town_explorer', {id: town.id, tab: "buildings"}) }}', true);
+                               } );
+                           break;
+
+                       case "complete":
+                           $.ajax.easySend( '{{ path('admin_town_set_building_ap', {id: town.id }) }}', {'building': buildingBtns[i].getAttribute("x-building-id"), 'ap': 99999999},
+                               function () {
+                                   $.ajax.load(null, '{{ path('admin_town_explorer', {id: town.id, tab: "buildings"}) }}', true);
+                               } );
+                           break;
+                       case "destroy":
+                           $.ajax.easySend( '{{ path('admin_town_set_building_ap', {id: town.id }) }}', {'building': buildingBtns[i].getAttribute("x-building-id"), 'ap': 0},
                                function () {
                                    $.ajax.load(null, '{{ path('admin_town_explorer', {id: town.id, tab: "buildings"}) }}', true);
                                } );
