Added ET OpenCollective message

--- a/templates/web/framework.html.twig
+++ b/templates/web/framework.html.twig
@@ -98,6 +98,8 @@
                         Unless otherwise expressly stated, all graphics in MyHordes are taken from these games and are therefore the property of <b>MotionTwin</b>.
                         <br /><br />
                         MyHordes is <i>Open Source</i> and everyone is welcome to <b>get involved</b>. You can find the source code at <a href="https://gitlab.com/eternal-twin/myhordes">Gitlab</a>.
+                        <br /><br />
+                        MyHordes is part of the <a href="https://eternal-twin.net">Eternal-Twin</a> project, if you wish you can donate on the <a href="https://opencollective.com/eternal-twin">OpenCollective</a> page.
                     </div>
                 </div>
             </div>
