--- a/templates/ajax/admin/users/citizen.html.twig
+++ b/templates/ajax/admin/users/citizen.html.twig
@@ -6,6 +6,7 @@
 {% from "ajax/admin/widget/controls.twig" import widget_role_control as role_control, widget_role_control_js as role_control_js %}
 {% from "ajax/admin/widget/controls.twig" import widget_point_control as point_control, widget_point_control_js as point_control_js %}
 {% from "ajax/admin/widget/controls.twig" import widget_profession_control as profession_control, widget_profession_control_js as profession_control_js %}
+{% from "ajax/admin/widget/controls.twig" import widget_home_control as home_control, widget_home_control_js as home_control_js %}
 
 {% block title %}{% trans from 'admin' %}Bürger{% endtrans %}{%  endblock %}
 {% block ajax %}
@@ -68,6 +69,7 @@
                                     <div class="cell padded rw-6">{{ profession_control(citizenProfessions) }}</div>
                                     <div class="cell padded rw-6">{{ status_control(citizenStati) }}</div>
                                     <div class="cell padded rw-6">{{ role_control(citizenRoles) }}</div>
+                                    <div class="cell padded rw-12">{{ home_control(user_citizen,home_upgrades) }}</div>
                                 {% endif %}
                             {% else %}
                                 {% if is_granted("ROLE_ADMIN") %}
@@ -93,6 +95,7 @@
 {% block js %}
     {{ parent() }}
     {% if is_granted("ROLE_ADMIN") and alive %}
+        {{ home_control_js('#citizen_base_selector', path('admin_town_manage_home', {id: user_citizen.town.id}), path('admin_users_citizen_view', {id: user.id})) }}
         {{ status_control_js('#citizen_base_selector', path('admin_town_manage_status', {id: user_citizen.town.id}), path('admin_users_citizen_view', {id: user.id})) }}
         {{ role_control_js('#citizen_base_selector', path('admin_town_manage_role', {id: user_citizen.town.id}), path('admin_users_citizen_view', {id: user.id})) }}
         {{ point_control_js('#citizen_base_selector', path('admin_town_alter_pp', {id: user_citizen.town.id}), path('admin_users_citizen_view', {id: user.id})) }}
