--- a/templates/ajax/forum/posts_small.html.twig
+++ b/templates/ajax/forum/posts_small.html.twig
@@ -26,17 +26,17 @@
                         <b>
                             {% if post.owner.name == 'Der Rabe' %}
                                 <a class="link" href="{{ path('soul_visit', {id: post.owner.id}) }}">{{ 'Der Rabe'|trans({},'global') }}</a>
-                                <span class="small float-left" style="font-size: 0.7em">{{ 'Ich beobachte euch...'|trans({},'game') }}</span>
+                                <span class="small" style="font-size: 0.7em"><i>{{ 'Ich beobachte euch...'|trans({},'game') }}</i></span>
                             {% elseif post.type == "DEV" %}
                                 <a class="link" href="{{ path('soul_visit', {id: post.owner.id}) }}">{{ post.owner.name }}</a>
                                 <img alt="" src="{{ asset('build/images/icons/small_admin.gif') }}" />
-                                {% if post.owner.activeTitle %}<br /><span class="small float-left" style="font-size: 0.7em">{{ post.owner.activeTitle.prototype.title|trans({},'game') }}</span>{% endif %}
+                                {% if post.owner.activeTitle %}<br /><span class="small" style="font-size: 0.7em"><i>{{ post.owner.activeTitle.prototype.title|trans({},'game') }}</i></span>{% endif %}
                             {% else %}
                                 <a class="link" href="{{ path('soul_visit', {id: post.owner.id}) }}">{{ post.owner.name }}</a>
-                                {% if post.owner.activeTitle %}<br /><span class="small float-left" style="font-size: 0.7em">{{ post.owner.activeTitle.prototype.title|trans({},'game') }}</span>{% endif %}
+                                {% if post.owner.activeTitle %}<br /><span class="small" style="font-size: 0.7em"><i>{{ post.owner.activeTitle.prototype.title|trans({},'game') }}</i></span>{% endif %}
                             {% endif %}
                         </b>
-                        {% if post.note is not null %}<div class="right post-note">{{ post.note|replace({'%at_00%': 'in der Stadt oder am Stadttor'|trans({},'game')})|raw }}</div>{% endif %}
+                        {% if post.note is not null %}<div class="float-right post-note">{{ post.note|replace({'%at_00%': 'in der Stadt oder am Stadttor'|trans({},'game')})|raw }}</div>{% endif %}
                     </div>
                     <div class="forum-post-content">
                         {{ post.translate ? (post.text|trans({},'game')|raw) : (post.text|raw) }}
