--- a/assets/less/modules/ghost.less
+++ b/assets/less/modules/ghost.less
@@ -21,19 +21,11 @@
 }
 
 .town-join-rp {
-  width:fit-content;
-  padding-right: 15px;
+  width: min-content; padding-right: 15px; display: inline-block;vertical-align: top;
   .town-join-rp-head {
-    color:white;
-    font-size: 110%;
-    font-weight: bold;
+    color:white; font-size: 110%; font-weight: bold; display: inline-block; width: max-content;
   }
   .town-join-rp-text {
-    font-size: 80%;
-
-    &:before {
-      content: "";
-      display: block;
-    }
+    font-size: 80%; width: max-content;
   }
 }
