--- a/templates/ajax/ghost/create_town.html.twig
+++ b/templates/ajax/ghost/create_town.html.twig
@@ -15,7 +15,7 @@
                             <div class="avatar small ua-{{ app.user.id % 10 }}"><img alt="" src="{{ path('app_web_avatar', {'uid': app.user.id, 'name': app.user.avatar.smallName, 'ext': app.user.avatar.format}) }}"></div>
                         {% endif %}
                         <h4 class="soul-name">
-                            <img src="{{ asset('build/images/icons/small_ghost_red.gif') }}" alt="{{'Held'|trans({}, 'game')}}" /> <a class="username">{{ app.user.name }}</a>
+                            <a class="username">{{ app.user.name }}</a>
                         </h4>
                         <div class="town-join-rp hide-sm">
                             <span class="town-join-rp-head">
