Fix picto statistic box background Turn picto box into a widget

--- a/assets/less/intl.less
+++ b/assets/less/intl.less
@@ -69,9 +69,9 @@ html.lang-base-en div.town-banner.town-banner-houses.night { background-image: u
 html.lang-base-fr div.town-banner.town-banner-houses.night { background-image: url("../img/background/town/night_houses_fr.jpg") }
 html.lang-base-es div.town-banner.town-banner-houses.night { background-image: url("../img/background/town/night_houses_es.jpg") }
 
-html.lang-base-en div.soul .distinctions { background-image: url("../img/soul/rewardsBg_header_en.gif") }
-html.lang-base-fr div.soul .distinctions { background-image: url("../img/soul/rewardsBg_header_fr.gif") }
-html.lang-base-es div.soul .distinctions { background-image: url("../img/soul/rewardsBg_header_es.gif") }
+html.lang-base-en div.soul .distinctions { background-image: url("../img/soul/rewardsBg_header_en.gif"), url('../img/soul/rewardsBg_back.gif'); }
+html.lang-base-fr div.soul .distinctions { background-image: url("../img/soul/rewardsBg_header_fr.gif"), url('../img/soul/rewardsBg_back.gif'); }
+html.lang-base-es div.soul .distinctions { background-image: url("../img/soul/rewardsBg_header_es.gif"), url('../img/soul/rewardsBg_back.gif'); }
 
 html.lang-base-en div.soul .news .head { background-image: url("../img/underDevBanner_en.gif") }
 html.lang-base-fr div.soul .news .head { background-image: url("../img/underDevBanner_fr.gif") }
