--- a/assets/less/modules/soul.less
+++ b/assets/less/modules/soul.less
@@ -76,8 +76,8 @@ div.tooltip.badge-tooltip {
     }
 
     .distinctions {
-        max-width: 270px; background: url("../../img/soul/rewardsBg_header.gif") top/100% no-repeat;
-        padding-bottom: 0 !important; margin-left: 3px;
+        width: 270px; max-width: 100%; background: url("../../img/soul/rewardsBg_header.gif") top/100% no-repeat, url("../../img/soul/rewardsBg_back.gif") top/100% repeat-y;
+        padding-bottom: 0 !important; margin-left: 3px; display: inline-block;
 
         .distinctions-head {
             padding-top: 45px; color: #f0d79e; font-variant: small-caps; font-weight: bold; font-size: 2rem;
