Fix hero skill page

--- a/templates/ajax/soul/heroskills.html.twig
+++ b/templates/ajax/soul/heroskills.html.twig
@@ -2,7 +2,7 @@
 {% block soul_content %}
     <div class="row skills">
         <div class="row skillBack">
-            <label class="button" x-ajax-href="{{ path('soul_me') }}">
+            <label style="position: relative" class="button" x-ajax-href="{{ path('soul_me') }}">
                 {{'Komm zurück zu meiner Seele'|trans({}, 'game')}}
             </label>
         </div>
