Don't put CAPS for descriptions of heroic actions

--- a/templates/ajax/game/actions.html.twig
+++ b/templates/ajax/game/actions.html.twig
@@ -182,7 +182,7 @@
                         {% endif %}
                     {% endif %}
                     {% if not entry.action.tooltip is null %}
-                        <em class="em">{{ entry.action.tooltip|trans({}, 'items')|raw }}</em>
+                        <em class="em" style="font-variant: none;">{{ entry.action.tooltip|trans({}, 'items')|raw }}</em>
                     {% endif %}
                 </li>
             {% endfor %}
