--- a/templates/ajax/game/town/home.html.twig
+++ b/templates/ajax/game/town/home.html.twig
@@ -504,7 +504,7 @@
             <div class="row-table">
                 {% for id,upgrade in upgrades %}
                     {# @var upgrade \App\Entity\CitizenHomeUpgradePrototype #}
-                    <div class="row">
+                    <div class="row {% if upgrade_levels[id] != 0 %}highlight{% endif %}">
                         <div class="padded cell {% if home.citizen.profession.heroic %}rw-8{% else %}rw-12{% endif %}">
                             <img alt="" src="{{ asset('build/images/home/' ~ upgrade.icon ~ '.gif') }}" /> <b>{{ upgrade.label|trans({},'buildings') }}</b>
                             <div class="justify">
