--- a/assets/less/modules/forum.less
+++ b/assets/less/modules/forum.less
@@ -55,6 +55,8 @@
 
   img { max-height: 480px; max-width: 100%; height: auto !important; width: auto !important; }
 
+  div.clear { display: block; height: 0; clear: left }
+
   span.quoteauthor {
     font-weight: bold;
     margin-left: 30px;
@@ -66,7 +68,6 @@
     padding-right: 5px !important;
     padding-left: 5px !important;
     color: #f0d79e !important;
-    font-weight: bold !important;
     + blockquote {
       margin-top: 0;
     }
