--- a/templates/ajax/forum/posts_small.html.twig
+++ b/templates/ajax/forum/posts_small.html.twig
@@ -7,15 +7,6 @@
             {% if not post.hidden or is_granted("ROLE_CROW") %}
                 <div class="forum-post {% if not post.hidden %}{% else %}forum-post-hidden{% endif %} {% if post.new %}forum-post-new{% endif %} {% if markedPost is defined and post.id == markedPost %}forum-post-marked{% endif %}" id="{{post.id}}">
                     <div class="forum-post-header {% if post.owner.name == 'Der Rabe' %}header-variant-crow{% elseif post.type == "DEV" %}header-variant-dev{% endif %}">
-                        <i>
-                            {% if post.date >= 'today'|to_date %}
-                                {{ 'Heute um'|trans({},'global') }} {{ post.date|format_datetime('none', 'short') }}
-                            {% elseif post.date >= 'yesterday'|to_date %}
-                                {{ 'Gestern um'|trans({},'global') }} {{ post.date|format_datetime('none', 'short') }}
-                            {% else %}
-                                {{ post.date|format_datetime('medium', 'short') }}
-                            {% endif %}
-                        </i>
                         {% if post.owner.name == 'Der Rabe' %}
                             <div class="avatarcrow small"><img alt="" src="{{ asset('build/images/forum/crow/crow.small.' ~ (app.request.locale|e('html_attr')|split('_', 2))[0] ~ '.png') }}"></div>
                         {% elseif (post.owner.avatar) %}
@@ -25,15 +16,15 @@
                         {% endif %}
                         <b>
                             {% if post.owner.name == 'Der Rabe' %}
-                                <a class="link" href="{{ path('soul_visit', {id: post.owner.id}) }}">{{ 'Der Rabe'|trans({},'global') }}</a>
+                                <a class="link" href="{{ path('soul_visit', {id: post.owner.id}) }}">{{ 'Der Rabe'|trans({},'global') }}</a><br />
                                 <span class="small" style="font-size: 0.7em"><i>{{ 'Ich beobachte euch...'|trans({},'game') }}</i></span>
                             {% elseif post.type == "DEV" %}
-                                <a class="link" href="{{ path('soul_visit', {id: post.owner.id}) }}">{{ post.owner.name }}</a>
+                                <a class="link" href="{{ path('soul_visit', {id: post.owner.id}) }}">{{ post.owner.name }}</a><br />
                                 <img alt="" src="{{ asset('build/images/icons/small_admin.gif') }}" />
-                                {% if post.owner.activeTitle %}<br /><span class="small" style="font-size: 0.7em"><i>{{ post.owner.activeTitle.prototype.title|trans({},'game') }}</i></span>{% endif %}
+                                {% if post.owner.activeTitle %}<span class="small" style="font-size: 0.7em"><i>{{ post.owner.activeTitle.prototype.title|trans({},'game') }}</i></span>{% endif %}
                             {% else %}
-                                <a class="link" href="{{ path('soul_visit', {id: post.owner.id}) }}">{{ post.owner.name }}</a>
-                                {% if post.owner.activeTitle %}<br /><span class="small" style="font-size: 0.7em"><i>{{ post.owner.activeTitle.prototype.title|trans({},'game') }}</i></span>{% endif %}
+                                <a class="link" href="{{ path('soul_visit', {id: post.owner.id}) }}">{{ post.owner.name }}</a><br />
+                                {% if post.owner.activeTitle %}<span class="small" style="font-size: 0.7em; display: inline-block;overflow: hidden;text-overflow: ellipsis;max-width: calc(100% - 130px); white-space: nowrap;"><i>{{ post.owner.activeTitle.prototype.title|trans({},'game') }}</i></span>{% endif %}
                             {% endif %}
                         </b>
                         {% if post.note is not null %}<div class="float-right post-note">{{ post.note|replace({'%at_00%': 'in der Stadt oder am Stadttor'|trans({},'game')})|raw }}</div>{% endif %}
@@ -49,6 +40,16 @@
                             {% endif %}
                         {% endif %}
                     </div>
+                    <i class="small float-right" style="opacity: 0.5; padding: 2px;">
+                        {% if post.date >= 'today'|to_date %}
+                            {{ 'Heute um'|trans({},'global') }} {{ post.date|format_datetime('none', 'short') }}
+                        {% elseif post.date >= 'yesterday'|to_date %}
+                            {{ 'Gestern um'|trans({},'global') }} {{ post.date|format_datetime('none', 'short') }}
+                        {% else %}
+                            {{ post.date|format_datetime('medium', 'short') }}
+                        {% endif %}
+                    </i>
+
                 </div>
             {% endif %}
         {% endfor %}
