--- a/assets/less/modules/soul.less
+++ b/assets/less/modules/soul.less
@@ -83,9 +83,10 @@ div.tooltip.badge-tooltip {
             padding-top: 45px; color: #f0d79e; font-variant: small-caps; font-weight: bold; font-size: 2rem;
         }
 
+        .distinctions-points { color: #FF8866; font-size: 2.4rem; margin-top: 5px; }
+
         .distinctions-list {
             padding: 0 10px; min-height: 100px;
-            .overall { color: #FF8866; font-size: 2.4rem; margin-top: 5px; }
 
             .empty {
                 border: 1px dashed #823D2D; color: #FF8866; padding: 10px; font-size: 1.2rem; font-style: italic;
