Change tooltip class for pictos

--- a/templates/ajax/soul/distinctions.html.twig
+++ b/templates/ajax/soul/distinctions.html.twig
@@ -23,7 +23,7 @@
                                     {% for number in picto.c|split('') %}<span class="count" title="{{number}}">{{number}}</span>{% endfor %}
                                 </div>
                             </div>
-                            <div class="tooltip">
+                            <div class="tooltip forum-tooltip">
                                 <h1>{{ picto.label|trans({}, 'game') }}</h1>
                                 <em>{{ picto.description|trans({}, 'game')}}</em>
                             </div>
