--- a/assets/less/modules/soul.less
+++ b/assets/less/modules/soul.less
@@ -105,6 +105,15 @@ div.tooltip.badge-tooltip {
                     .pictoBitmapFont();
                 }
             }
+            .tabs {
+                border-bottom: none; min-height: 14px; background: none;
+            }
+            .TitlesList {
+                text-decoration: none; color: #f0d79e; list-style: none; text-align: initial;
+                li {
+                    border-bottom: 1px dashed white;
+                }
+            }
         }
 
         .distinctions-foot {
